gcp_deployment/team7/yaml_files/elk.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elk-stack
  labels:
    app: elk
spec:
  containers:
    - name: elasticsearch
      image: docker.elastic.co/elasticsearch/elasticsearch:8.10.1
      ports:
        - containerPort: 9200
      resources:
        limits:
          memory: "2Gi"
        requests:
          memory: "512Mi"

    - name: logstash
      image: docker.elastic.co/logstash/logstash:8.10.1
      ports:
        - containerPort: 5044
      volumeMounts:
        - name: logstash-config
          mountPath: /usr/share/logstash/pipeline/logstash.conf
          subPath: logstash.conf
      resources:
        limits:
          memory: "1Gi"
        requests:
          memory: "256Mi"

    - name: kibana
      image: docker.elastic.co/kibana/kibana:8.10.1
      ports:
        - containerPort: 5601
      resources:
        limits:
          memory: "1Gi"
        requests:
          memory: "256Mi"

  volumes:
    - name: logstash-config
      configMap:
        name: logstash-config

---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  labels:
    app: elk
spec:
  type: ClusterIP
  ports:
    - port: 5601
      targetPort: 5601
  selector:
    app: elk
