gcp_deployment/team7/yaml_files/keycloak-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: registry.gitlab.com/kdg-ti/integratieproject-2/2024-2025/team7/keycloak:latest
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data # Ensure this matches where your database expects its data
              subPath: data # Avoid overwriting the root directory
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
      imagePullSecrets:
        - name: gitlab-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
