gcp_deployment/team7/yaml_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monopoly-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-set-header: "X-Forwarded-Proto"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: team7.launchingkube.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-service
                port:
                  number: 80
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8180
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8180
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
  tls:
    - hosts:
        - team7.launchingkube.com
      secretName: monopoly-tls
